Création de invite.html

--- a/invite.html
+++ b/invite.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="src/css/style.css">
-        <title>Festiv'Halloween</title>
+        <title>Les invités</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,65 +64,34 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/scream_killer.png">
-            <h1 class="header__title">Notre festival</h1>
+            <img class="header__img" src="assets/header/jack_the_ripper.png">
+            <h1 class="header__title">Nos invités</h1>
         </div>
-        <h2 class="body__title">
-            Une Nuit d'Épouvante à Montbéliard
-        </h2>
-        <p class="body__text">
-            Amateurs de <span class="body__bold">frissons</span>, préparez-vous à vivre une expérience cinématographique inoubliable ! <span class="body__bold">Festiv'Halloween</span> vous plonge dans l'univers terrifiant du cinéma d'<span class="body__bold">horreur</span>, pour une nuit entière dédiée aux sensations fortes. Organisé à <span class="body__bold">Montbéliard</span>, notre festival coïncide parfaitement avec la période d'<span class="body__bold">Halloween</span>, créant une atmosphère idéale pour célébrer le plaisir de la peur.
-        </p>
-        <p class="body__text">
-            Nous savons que beaucoup d'entre vous aiment se faire <span class="body__bold">peur</span>, suspendus à leur siège, ressentant la tension croissante d'un bon film d'<span class="body__bold">épouvante</span>. C'est pour cela que Festiv'Halloween a vu le jour : offrir aux amateurs de <span class="body__bold">frissons</span> un festival entièrement dédié à l'horreur et à l'épouvante. En <span class="body__bold">Franche-Comté</span>, les festivals de cinéma se font rares, et encore plus ceux consacrés aux films d'<span class="body__bold">horreur</span>. C'est donc une opportunité unique pour les passionnés du genre de se rassembler, que vous soyez amateurs, curieux, ou professionnels.
-        </p>
-        <img class="body__img" src="assets/others_images/girl_in_scary_room.png">
-        <p class="body__text">
-            Pendant toute une nuit, le festival proposera un large éventail de films d'horreur : <span class="body__bold">thrillers</span> psychologiques, slashers, films <span class="body__bold">gores</span>, et bien plus encore, pour satisfaire tous les goûts. Nos principaux publics ? Les jeunes, qui adorent les sorties entre amis et se retrouver pour se faire peur. Mais aussi les amateurs de cinéma d'<span class="body__bold">horreur</span>, qui dévorent les classiques et attendent avec impatience de découvrir de nouvelles pépites. Et bien sûr, nous accueillons également les professionnels ou ceux qui souhaitent s'inspirer et enrichir leur culture du <span class="body__bold">cinéma d'épouvante.</span>
-        </p>
-        <p class="body__little__title">
-            Rejoignez-nous pour une nuit où le suspense, la peur et l'horreur seront au rendez-vous. Festiv'Halloween, c'est l'occasion de vibrer et de sursauter.  Vous n'êtes pas prêts de l'oublier !
-        </p>
-        <div class="card__class">
-            <img class="card__img" src="assets/cards/seated_pumpkin.png">
-            <div class="card__block">
-                <p class="card__title">Du 29 au 31 Octobre</p>
-                <p class="card__text">Le premier Festiv'Haloween se déroulera à Montbéliard.</p>
-                <a class="card__link" href="pres.html">Plus d'infos</a>
-            </div>
-        </div>
-        <div class="card__class">
-            <img class="card__img" src="assets/cards/it_poster.png">
-            <div class="card__block">
-                <p class="card__title">Programmation</p>
-                <p class="card__text">Découvre les films qui seront diffusés lors du festival.</p>
-                <a class="card__link" href="programmation.html">Plus d'infos</a>
-            </div>
-        </div>
-        <div class="card__class">
-            <img class="card__img" src="assets/cards/scary_room.png">
-            <div class="card__block">
-                <p class="card__title">Billetterie en ligne</p>
-                <p class="card__text">Découvrez la billetterie en ligne pour obtenir des places.</p>
-                <a class="card__link" href="billetterie.html">Plus d'infos</a>
-            </div>
-        </div>
-        <div class="card__class">
-            <img class="card__img" src="assets/cards/art_the_clown.png">
-            <div class="card__block">
-                <p class="card__title">Filmographie</p>
-                <p class="card__text">Découvrez les films en tête d'affiche du festival.</p>
-                <a class="card__link" href="fimographie.html">Plus d'infos</a>
-            </div>
-        </div>
-        <div class="card__class">
-            <img class="card__img" src="assets/cards/winnie_the_pooh.png">
-            <div class="card__block">
-                <p class="card__title">À propos</p>
-                <p class="card__text">Apprenez en plus sur ce festival de films d'horreurs</p>
-                <a class="card__link" href="a_propos.html">Plus d'infos</a>
-            </div>
-        </div>
+        <h2 class="body__title">Invités présents</h2>
+        <img class="body__img" src="assets/invite/acteurs/bill_skarsgard.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/Bill_Skarsg%C3%A5rd">Bill Skarsgård</a>
+        <p class="body__text">Bill Skarsgård (né le 9 août 1990) est un acteur suédois célèbre pour son rôle terrifiant de Pennywise dans Ça (It, 2017) et Ça : Chapitre 2. Fils de Stellan Skarsgård, il s'est distingué par des performances dans Hemlock Grove et Barbarian, consolidant sa réputation dans les genres de l'horreur et du thriller.</p>
+        <img class="body__img" src="assets/invite/acteurs/jenna_ortega.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/Jenna_Ortega">Jenna Ortega</a>
+        <p class="body__text">Jenna Ortega (née le 27 septembre 2002) est une actrice américaine célèbre pour son rôle de Tara Carpenter dans Scream (2022) et Scream VI (2023), où elle apporte une nouvelle énergie à la franchise. Étoile montante, elle est également connue pour la série Mercredi (Wednesday).</p>
+        <img class="body__img" src="assets/invite/acteurs/robert_englund.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/Robert_Englund">Robert Englund</a>
+        <p class="body__text">Robert Englund (né le 6 juin 1947) est un acteur américain iconique, connu pour son rôle légendaire de Freddy Krueger dans la saga A Nightmare on Elm Street. Sa performance, mêlant horreur et humour macabre, a marqué l'histoire du cinéma d'horreur. Avec ce personnage, Englund est devenu une figure culte du genre, incarnant Freddy dans huit films entre 1984 et 2003.</p>
+        <img class="body__img" src="assets/invite/acteurs/courtney_cox.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/Courteney_Cox">Courtney Cox</a>
+        <p class="body__text">Courteney Cox (née le 15 juin 1964) est une actrice américaine, surtout connue pour son rôle de Gale Weathers dans la franchise Scream. Depuis le premier film en 1996, elle incarne cette journaliste déterminée, un personnage central de la saga. Elle est également célèbre pour son rôle de Monica Geller dans Friends (1994-2004), l'une des sitcoms les plus populaires de tous les temps.</p>
+        <img class="body__img" src="assets/invite/realisateurs/james_wan.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/James_Wan">James Wan</a>
+        <p class="body__text">James Wan (né le 26 février 1977) est un réalisateur, producteur et scénariste malaisien, reconnu pour sa contribution majeure au cinéma d'horreur. Il est surtout célèbre pour avoir créé la saga Saw (2004), qui a redéfini le genre du film d'horreur avec ses pièges complexes et son suspense psychologique. Il est également à l'origine de The Conjuring (2013), une franchise d'horreur populaire, et a dirigé Insidious (2010), un autre succès du genre.</p>
+        <img class="body__img" src="assets/invite/realisateurs/damian_leone.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/Damien_Leone">Damien Leone</a>
+        <p class="body__text">Damien Leone est un réalisateur et scénariste américain, surtout connu pour la saga Terrifier. Il a créé le personnage du tueur Art the Clown, qui a fait sa première apparition dans All Hallows' Eve (2013) avant de devenir la star des films Terrifier (2016) et Terrifier 2 (2022). Son style graphique et son usage des effets spéciaux violents l'ont fait reconnaître dans le cinéma d'horreur indépendant.</p>
+        <img class="body__img" src="assets/invite/realisateurs/jordan_peele.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/Jordan_Peele">Jordan Peele</a>
+        <p class="body__text">Jordan Peele (né le 21 février 1979) est un réalisateur et scénariste américain, reconnu pour ses films d'horreur psychologique, notamment Get Out (2017), Us (2019) et Nope (2022). Il est salué pour sa capacité à mêler l'horreur avec des critiques sociales, en particulier sur des thèmes comme le racisme et les inégalités. Get Out a remporté un grand succès critique et lui a valu l'Oscar du meilleur scénario original.</p>
+        <img class="body__img" src="assets/invite/realisateurs/ari_aster.png">
+        <a class="body__semi__title" href="https://fr.wikipedia.org/wiki/Ari_Aster">Ari Aster</a>
+        <p class="body__text">Ari Aster (né le 15 juillet 1986) est un réalisateur et scénariste américain, reconnu pour ses films d'horreur psychologique Hereditary (2018) et Midsommar (2019). Il est salué pour ses explorations profondes de thèmes comme le deuil, la folie et les rituels sociaux, créant des atmosphères oppressantes et troublantes.</p>
     </body>
     <footer class="footer__class">
         <div class="footer__content">
