--- a/programmation.html
+++ b/programmation.html
@@ -65,6 +65,10 @@
             <a class="menu__link" href="fimographie.html">
                 <span class="menu__text">Filmographie</span>
             </a>
+            <img src="assets/icons/menu_icons/icon_invite.png" class="menu__icon">
+            <a class="menu__link" href="invite.html">
+                <span class="menu__text">Invités</span>
+            </a>
             <img src="assets/icons/menu_icons/icon_gosth.png" class="menu__icon">
             <a class="menu__link" href="a_propos.html">
                 <span class="menu__text">À propos</span>
@@ -269,7 +273,8 @@
                     Programmation <br>
                     Billetterie <br>
                     Filmographie <br>
-                    à propos
+                    Invités <br>
+                    À propos
                 </p>
             </div>
             <div class="footer__section">
