Positionnement d'alt sur pas mal images

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <body class="body__class">
         <div class="header__mobile">
             <a href="index.html">
-                <img class="header__logo" src="assets/logo/logo_without_text.png">
+                <img class="header__logo" src="assets/logo/logo_without_text.png" alt="Logo du Festiv'Halloween">
             </a>
-                        <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
+            <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png" alt="Icone loupe">
             <button class="menu__btn">
-                <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
+                <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png" alt="icone menu hamburger">
             </button>
         </div>
-        <nav class="header__menu menu" id="mainNav" aria-hidden="true">
-            <img src="assets/logo/logo_with_text.png" class="menu__logo">
-            <img src="assets/icons/header_icons/icon_search.png" class="menu__icon__search">
+        <nav class="header__menu menu" id="mainNav" aria-hidden="true" aria-label="Menu">
+            <img src="assets/logo/logo_with_text.png" class="menu__logo" alt="logo du Festiv'Halloween">
+            <img src="assets/icons/header_icons/icon_search.png" class="menu__icon__search" alt="icone loupe">
             <button class="menu__btn__cross">
-                <img src="assets/icons/menu_icons/icon_cross.png" class = "menu__icon__cross">
+                <img src="assets/icons/menu_icons/icon_cross.png" class = "menu__icon__cross" alt="icone croix">
             </button>
             <img src="assets/icons/menu_icons/icon_pumpkin.png" class="menu__icon">
             <a class="menu__link" href="index.html">
@@ -64,7 +64,7 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/scream_killer.png">
+            <img class="header__img" src="assets/header/scream_killer.png" alt="Image représentant un tueur en série du film Scream">
             <h1 class="header__title">Notre festival</h1>
         </div>
         <h2 class="body__title">
@@ -76,7 +76,7 @@
         <p class="body__text">
             Nous savons que beaucoup d'entre vous aiment se faire <span class="body__bold">peur</span>, suspendus à leur siège, ressentant la tension croissante d'un bon film d'<span class="body__bold">épouvante</span>. C'est pour cela que Festiv'Halloween a vu le jour : offrir aux amateurs de <span class="body__bold">frissons</span> un festival entièrement dédié à l'horreur et à l'épouvante. En <span class="body__bold">Franche-Comté</span>, les festivals de cinéma se font rares, et encore plus ceux consacrés aux films d'<span class="body__bold">horreur</span>. C'est donc une opportunité unique pour les passionnés du genre de se rassembler, que vous soyez amateurs, curieux, ou professionnels.
         </p>
-        <img class="body__img" src="assets/others_images/girl_in_scary_room.png">
+        <img class="body__img" src="assets/others_images/girl_in_scary_room.png" alt="Image représentant une fille dans une pièce effrayante">
         <p class="body__text">
             Pendant toute une nuit, le festival proposera un large éventail de films d'horreur : <span class="body__bold">thrillers</span> psychologiques, slashers, films <span class="body__bold">gores</span>, et bien plus encore, pour satisfaire tous les goûts. Nos principaux publics ? Les jeunes, qui adorent les sorties entre amis et se retrouver pour se faire peur. Mais aussi les amateurs de cinéma d'<span class="body__bold">horreur</span>, qui dévorent les classiques et attendent avec impatience de découvrir de nouvelles pépites. Et bien sûr, nous accueillons également les professionnels ou ceux qui souhaitent s'inspirer et enrichir leur culture du <span class="body__bold">cinéma d'épouvante.</span>
         </p>
@@ -84,7 +84,7 @@
             Rejoignez-nous pour une nuit où le suspense, la peur et l'horreur seront au rendez-vous. Festiv'Halloween, c'est l'occasion de vibrer et de sursauter.  Vous n'êtes pas prêts de l'oublier !
         </p>
         <div class="card__class">
-            <img class="card__img" src="assets/cards/seated_pumpkin.png">
+            <img class="card__img" src="assets/cards/seated_pumpkin.png" alt="Image représentant une citrouille effrayante assise sur une chaise">
             <div class="card__block">
                 <p class="card__title">Du 29 au 31 Octobre</p>
                 <p class="card__text">Le premier Festiv'Haloween se déroulera à Montbéliard.</p>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="card__class">
-            <img class="card__img" src="assets/cards/it_poster.png">
+            <img class="card__img" src="assets/cards/it_poster.png" alt="Poster du film Ça">
             <div class="card__block">
                 <p class="card__title">Programmation</p>
                 <p class="card__text">Découvre les films qui seront diffusés lors du festival.</p>
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="card__class">
-            <img class="card__img" src="assets/cards/scary_room.png">
+            <img class="card__img" src="assets/cards/scary_room.png" alt="Photo d'une pièce effrayante">
             <div class="card__block">
                 <p class="card__title">Billetterie en ligne</p>
                 <p class="card__text">Découvrez la billetterie en ligne pour obtenir des places.</p>
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="card__class">
-            <img class="card__img" src="assets/cards/art_the_clown.png">
+            <img class="card__img" src="assets/cards/art_the_clown.png" alt="Photo du clown tueur protagoniste du film Terrifier">
             <div class="card__block">
                 <p class="card__title">Filmographie</p>
                 <p class="card__text">Découvrez les films en tête d'affiche du festival.</p>
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="card__class">
-            <img class="card__img" src="assets/cards/winnie_the_pooh.png">
+            <img class="card__img" src="assets/cards/winnie_the_pooh.png" alt="Photo de Winnie l'ourson dans le film d'horreur Winnie the pooh">
             <div class="card__block">
                 <p class="card__title">À propos</p>
                 <p class="card__text">Apprenez en plus sur ce festival de films d'horreurs</p>
@@ -126,7 +126,7 @@
     </body>
     <footer class="footer__class">
         <div class="footer__content">
-            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
+            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png" alt="Logo du Festiv'Halloween">
             <span class="footer__festivhalloween__title">Festiv'Halloween</span>
             <div class="footer__section">
                 <p class="footer__semi__title">
@@ -142,7 +142,7 @@
                     À propos
                 </p>
             </div>
-            <div class="footer__section">
+            <div class="footer__section" aria-label="Contactez-nous !">
                 <p class="footer__semi__title">
                     Contact :
                 </p>
@@ -157,12 +157,12 @@
                     Nous suivre :
                 </p>
                 <div class="footer__icon__section">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png" alt="Logo Instagram">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png" alt="Logo Tik Tok">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png" alt="Logo Facebook">
                 </div>
             </div>
-            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png">
+            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png" alt="Logo du BUT MMI de Montbéliard">
         </div>
     </footer>
 </html>
