--- a/invite.html
+++ b/invite.html
@@ -95,7 +95,7 @@
     </body>
     <footer class="footer__class">
         <div class="footer__content">
-            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
+            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png" alt="Logo du Festiv'Halloween">
             <span class="footer__festivhalloween__title">Festiv'Halloween</span>
             <div class="footer__section">
                 <p class="footer__semi__title">
@@ -111,7 +111,7 @@
                     À propos
                 </p>
             </div>
-            <div class="footer__section">
+            <div class="footer__section" aria-label="Contactez-nous !">
                 <p class="footer__semi__title">
                     Contact :
                 </p>
@@ -126,12 +126,12 @@
                     Nous suivre :
                 </p>
                 <div class="footer__icon__section">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png" alt="Logo Instagram">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png" alt="Logo Tik Tok">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png" alt="Logo Facebook">
                 </div>
             </div>
-            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png">
+            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png" alt="Logo du BUT MMI de Montbéliard">
         </div>
     </footer>
 </html>
