--- a/a_propos.html
+++ b/a_propos.html
@@ -17,21 +17,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Hammersmith+One&family=Nosifer&display=swap" rel="stylesheet">
         <script src="src/js/menu.js"></script>
     </head>
-    <body>
+    <body class="body__class">
         <div class="header__mobile">
             <a href="index.html">
-                <img class="header__logo" src="assets/logo/logo_without_text.png">
+                <img class="header__logo" src="assets/logo/logo_without_text.png" alt="Logo du Festiv'Halloween">
             </a>
-            <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png">
+            <img class="header__icon__search" src="assets/icons/header_icons/icon_search.png" alt="Icone loupe">
             <button class="menu__btn">
-                <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png">
+                <img class="header__icon__menu" src="assets/icons/header_icons/icon_menu_hamburger.png" alt="icone menu hamburger">
             </button>
         </div>
-        <nav class="header__menu menu" id="mainNav" aria-hidden="true">
-            <img src="assets/logo/logo_with_text.png" class="menu__logo">
-            <img src="assets/icons/header_icons/icon_search.png" class="menu__icon__search">
+        <nav class="header__menu menu" id="mainNav" aria-hidden="true" aria-label="Menu">
+            <img src="assets/logo/logo_with_text.png" class="menu__logo" alt="logo du Festiv'Halloween">
+            <img src="assets/icons/header_icons/icon_search.png" class="menu__icon__search" alt="icone loupe">
             <button class="menu__btn__cross">
-                <img src="assets/icons/menu_icons/icon_cross.png" class = "menu__icon__cross">
+                <img src="assets/icons/menu_icons/icon_cross.png" class = "menu__icon__cross" alt="icone croix">
             </button>
             <img src="assets/icons/menu_icons/icon_pumpkin.png" class="menu__icon">
             <a class="menu__link" href="index.html">
@@ -72,9 +72,7 @@
     </body>
     <footer class="footer__class">
         <div class="footer__content">
-            <a href="index.html">
-                <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png">
-            </a>
+            <img class="footer__logo" src="assets/icons/footer_icons/big_logo_without_text.png" alt="Logo du Festiv'Halloween">
             <span class="footer__festivhalloween__title">Festiv'Halloween</span>
             <div class="footer__section">
                 <p class="footer__semi__title">
@@ -90,7 +88,7 @@
                     À propos
                 </p>
             </div>
-            <div class="footer__section">
+            <div class="footer__section" aria-label="Contactez-nous !">
                 <p class="footer__semi__title">
                     Contact :
                 </p>
@@ -105,12 +103,12 @@
                     Nous suivre :
                 </p>
                 <div class="footer__icon__section">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png">
-                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_instagram.png" alt="Logo Instagram">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_tiktok.png" alt="Logo Tik Tok">
+                    <img class="footer__icon" src="assets/icons/footer_icons/icon_facebook.png" alt="Logo Facebook">
                 </div>
             </div>
-            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png">
+            <img class="footer__mmi__logo" src="assets/logo/logo_mmi.png" alt="Logo du BUT MMI de Montbéliard">
         </div>
     </footer>
 </html>
