--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="src/css/style.css">
-        <title>À propos</title>
+        <title>Contact</title>
         <link rel="icon" href="assets/favicons/favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,17 +58,36 @@
                 <span class="menu__text">Invités</span>
             </a>
             <img src="assets/icons/menu_icons/icon_gosth.png" class="menu__icon">
-            <a class="menu__link" href="a_propos.html">
-                <span class="menu__text">À propos</span>
+            <a class="menu__link" href="contact.html">
+                <span class="menu__text">Contact</span>
             </a>
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
             <img class="header__img" src="assets/header/art_the_clown.png">
-            <h1 class="header__title">À propos</h1>
+            <h1 class="header__title">Contact</h1>
         </div>
-        <p class="body__title">À propos</p>
-        <p class="body__text">Ce travail a été réalisé dans le cadre d'une SAÉ (Situation d'Apprentissage et d'Évaluation) en BUT MMI (Bachelor Universitaire de Technologie Métiers du Multimédia et de l'Internet) à Montbéliard. Il a permis d'appliquer des compétences théoriques et pratiques acquises durant ma formation, en explorant des thématiques variées et en développant des projets concrets.</p>
+        <h2 class="body__title">Formulaire de contact</h2>
+        <div class="body__questionnaire">
+            <p class="body__text">Nom :</p>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre nom ici..."></textarea>
+            <hr class="body__line">
+            <p class="body__text">Prénom :</p>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre prénom ici..."></textarea>
+            <hr class="body__line">
+            <p class="body__text">Numéro de Téléphone :</p>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre numéro ici..."></textarea>
+            <hr class="body__line">
+            <p class="body__text">Adresse mail :</p>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre adresse mail ici..."></textarea>
+            <hr class="body__line">
+            <p class="body__text">Adresse :</p>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre adresse ici..."></textarea>
+            <hr class="body__line">
+            <div class="body__btn">
+                    <span class="body__btn__text">Envoyer</span>
+            </div>
+        </div>
     </body>
     <footer class="footer__class">
         <div class="footer__content">
@@ -85,7 +104,7 @@
                     Billetterie <br>
                     Filmographie <br>
                     Invités <br>
-                    À propos
+                    Contact
                 </p>
             </div>
             <div class="footer__section" aria-label="Contactez-nous !">
