--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <span class="menu__text">Invités</span>
             </a>
             <img src="assets/icons/menu_icons/icon_gosth.png" class="menu__icon">
-            <a class="menu__link" href="a_propos.html">
-                <span class="menu__text">À propos</span>
+            <a class="menu__link" href="contact.html">
+                <span class="menu__text">Contact</span>
             </a>
         </nav>
         <div class="header">
@@ -118,9 +118,9 @@
         <div class="card__class">
             <img class="card__img" src="assets/cards/winnie_the_pooh.png" alt="Photo de Winnie l'ourson dans le film d'horreur Winnie the pooh">
             <div class="card__block">
-                <p class="card__title">À propos</p>
+                <p class="card__title">Contact</p>
                 <p class="card__text">Apprenez en plus sur ce festival de films d'horreurs</p>
-                <a class="card__link" href="a_propos.html">Plus d'infos</a>
+                <a class="card__link" href="contact.html">Plus d'infos</a>
             </div>
         </div>
     </body>
@@ -139,7 +139,7 @@
                     Billetterie <br>
                     Filmographie <br>
                     Invités <br>
-                    À propos
+                    Contact
                 </p>
             </div>
             <div class="footer__section" aria-label="Contactez-nous !">
