--- a/page_film.html
+++ b/page_film.html
@@ -58,8 +58,8 @@
                 <span class="menu__text">Invités</span>
             </a>
             <img src="assets/icons/menu_icons/icon_gosth.png" class="menu__icon">
-            <a class="menu__link" href="a_propos.html">
-                <span class="menu__text">À propos</span>
+            <a class="menu__link" href="contact.html">
+                <span class="menu__text">Contact</span>
             </a>
         </nav>
         <div class="header">
@@ -97,7 +97,7 @@
                     Billetterie <br>
                     Filmographie <br>
                     Invités <br>
-                    À propos
+                    Contact
                 </p>
             </div>
             <div class="footer__section" aria-label="Contactez-nous !">
