--- a/contact.html
+++ b/contact.html
@@ -64,25 +64,25 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/art_the_clown.png">
+            <img class="header__img" src="assets/header/winnie_the_pooh.png" alt="image illustrant Winnie le personnage de Winnie the Pooh">
             <h1 class="header__title">Contact</h1>
         </div>
         <h2 class="body__title">Formulaire de contact</h2>
         <div class="body__questionnaire">
             <p class="body__text">Nom :</p>
-            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre nom ici..."></textarea>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="30" placeholder="Entrez votre nom ici..."></textarea>
             <hr class="body__line">
             <p class="body__text">Prénom :</p>
-            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre prénom ici..."></textarea>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="30" placeholder="Entrez votre prénom ici..."></textarea>
             <hr class="body__line">
             <p class="body__text">Numéro de Téléphone :</p>
-            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre numéro ici..."></textarea>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="30" placeholder="Entrez votre numéro ici..."></textarea>
             <hr class="body__line">
             <p class="body__text">Adresse mail :</p>
-            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre adresse mail ici..."></textarea>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="30" placeholder="Entrez votre adresse mail ici..."></textarea>
             <hr class="body__line">
             <p class="body__text">Adresse :</p>
-            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="40" placeholder="Entrez votre adresse ici..."></textarea>
+            <textarea class="body__input" id="textArea" name="textArea" rows="1" cols="30" placeholder="Entrez votre adresse ici..."></textarea>
             <hr class="body__line">
             <div class="body__btn">
                     <span class="body__btn__text">Envoyer</span>
