--- a/invite.html
+++ b/invite.html
@@ -64,7 +64,7 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/jack_the_ripper.png">
+            <img class="header__img" src="assets/header/jack_the_ripper.png" alt="Image illustrant Jack l'eventreur">
             <h1 class="header__title">Nos invités</h1>
         </div>
         <h2 class="body__title">Invités présents</h2>
