--- a/presentation.html
+++ b/presentation.html
@@ -64,7 +64,7 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/seated_pumpkin.png">
+            <img class="header__img" src="assets/header/seated_pumpkin.png" alt="Image illustrant une citrouille terrifiante assise sur une chaise">
             <h1 class="header__title">Presentation</h1>
         </div>
         <h2 class="body__title">Presentation du festival</h2>
