--- a/programmation.html
+++ b/programmation.html
@@ -76,7 +76,7 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/it_poster.png">
+            <img class="header__img" src="assets/header/it_poster.png" alt="Le poster du film Ça">
             <h1 class="header__title">Programmation</h1>
         </div>
         <h2 class="body__title">
