--- a/billetterie.html
+++ b/billetterie.html
@@ -64,7 +64,7 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/scary_room.png">
+            <img class="header__img" src="assets/header/scary_room.png" alt="Image illustrant une pièce effrayante">
             <h1 class="header__title">Billetterie</h1>
         </div>
         <h2 class="body__title">Les prix</h2>
