--- a/fimographie.html
+++ b/fimographie.html
@@ -64,7 +64,7 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/art_the_clown.png">
+            <img class="header__img" src="assets/header/art_the_clown.png" alt="Image illustrant Art the clown le personnage de Terrifier">
             <h1 class="header__title">Filmographie</h1>
         </div>
         <h2 class="body__title">Les films à l'affiche de notre festival</h2>
