--- a/page_film.html
+++ b/page_film.html
@@ -64,7 +64,7 @@
         </nav>
         <div class="header">
             <p class="header__festivhalloween__title">Festiv'Halloween</p>
-            <img class="header__img" src="assets/header/art_the_clown.png">
+            <img class="header__img" src="assets/header/art_the_clown.png" alt="Image illustrant Art le clown le personnnage de Terrifier">
             <h1 class="header__title">Terrifier</h1>
         </div>
         <h2 class="body__title">Terrifier (2016)</h2>
